--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   padding: 40px;
 }
 
-.header {
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -37,6 +37,12 @@ h1 {
   font-family: "Coiny", cursive;
   line-height: 1;
   margin-top: 6px;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  gap: 48px;
 }
 
 .fact {
@@ -69,7 +75,7 @@ ul {
 /* MEDIA QUERIES */
 
 @media (max-width: 900px) {
-  .main {
+  main {
     grid-template-columns: 1fr;
     height: auto;
   }
