--- a/style.css
+++ b/style.css
@@ -51,10 +51,48 @@ h1 {
 /* FORM */
 
 .fact-form {
+  display: flex;
+  align-items: center;
+  gap: 16px;
   background-color: #44403c;
   margin-bottom: 40px;
-  padding: 16px 40px;
+  padding: 16px 32px;
   text-align: center;
+  border-radius: 16px;
+}
+
+.fact-form input,
+.fact-form select {
+  width: 220px;
+  background-color: #78716c;
+  border: none;
+  border-radius: 100px;
+  padding: 16px;
+  font-size: 1.125rem;
+  color: inherit;
+  font-family: inherit;
+  transition: all 0.2s linear;
+}
+
+.fact-form input:focus,
+.fact-form select:focus {
+  outline: none !important;
+  border: 1px dashed #e7e5e4;
+  box-shadow: 0 0 10px #719ece;
+}
+
+.fact-form input::placeholder {
+  color: #a8a29e;
+}
+
+.fact-form input:first-child {
+  flex-grow: 1;
+}
+
+.fact-form span {
+  font-weight: 600;
+  font-size: 1.125rem;
+  margin-right: 18px;
 }
 
 main {
@@ -116,6 +154,7 @@ main {
   margin-bottom: 16px;
   padding: 16px 24px;
   letter-spacing: -1px;
+  border-radius: 16px;
 }
 
 .tag {
