displaying and hiding the form

--- a/style.css
+++ b/style.css
@@ -202,6 +202,10 @@ main {
   background-color: #292524;
 }
 
+.hidden {
+  display: none !important;
+}
+
 /* MEDIA QUERIES */
 
 @media (max-width: 1200px) {
